resources/2020/css/_sponsors.scss
$supporter-margin: (
  xs: rem_calc(50px),
  md: rem_calc(70px)
);

.sponsors {
  @include section;
  background: $color-background-dark;
}

.sponsors__heading {
  @extend .heading1;
  color: $color-paragraph;
}

.sponsors__subheading {
  @extend .heading2;
  color: $color-paragraph;
}

.sponsors__group {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  width: 100%;

  &:not(:last-child) {
    margin-bottom: rem-calc(120px);

    @include media-breakpoint-up(md) {
      margin-bottom: rem-calc(150px);
    }
  }
}

.sponsors__sponsor {
  img {
    display: block;
    max-width: 100%;
    max-height: 100%;
  }
}

.sponsors__group--gold .sponsors__sponsor {
  max-width: 70%;
  margin: 0 auto;

  img {
    width: rem-calc(700px);
  }
}

.sponsors__group--silver .sponsors__sponsor {
  max-width: 60%;
  margin: 0 auto;

  img {
    width: rem-calc(500px);
  }
  
  &--droit img {
    width: auto;
    max-height: rem-calc(80px);

    @include media-breakpoint-up(md) {
      max-height: rem-calc(150px);
    }
  }
}

.sponsors__group--diversity .sponsors__sponsor {
  max-width: 60%;
  margin: 0 auto;

  img {
    width: rem-calc(400px);
  }
}

.sponsors__group--supporters {
  justify-content: space-around;
  margin-bottom: -#{map_get($supporter-margin, xs)};

  @include media-breakpoint-up(md) {
    justify-content: center;
    margin-bottom: -#{map_get($supporter-margin, md)};
  }
}

.sponsors__group--supporters .sponsors__sponsor {
  width: 30%;
  margin: 0 6% map_get($supporter-margin, xs);

  @include media-breakpoint-up(md) {
    margin-bottom: map_get($supporter-margin, md);
    width: 21%;
  }

  img {
    width: 100%;

    @include media-breakpoint-up(md) {
      width: 80%;
    }
  }

  // Uncomment this if you have one sponsor on the last line and want to
  // re-shuffle them to have two sponsors on the first two lines instead
  // on medium screens and larger. Small screens always use two columns
  &:nth-child(-n + 4) {
    @include media-breakpoint-up(md) {
      // margin-left: 10%;
      // margin-right: 10%;
    }
  }

  &--thoughtworks {
    margin-left: 4%;
    margin-right: 4%;
    width: 36%;

    @include media-breakpoint-up(md) {
      width: 25%;
    }
  }

  &--feenk {
    margin-left: 8%;
    margin-right: 8%;

    @include media-breakpoint-up(md) {
      width: 17%;
    }
  }
}

